--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,11 @@
       "~/test/*": ["./test/hardhat/*"]
     }
   },
-  "include": ["./hardhat.config.ts", "src", "tools", "./typechain-types"]
+  "include": [
+    "./hardhat.config.ts",
+    "src",
+    "scripts",
+    "tools",
+    "./typechain-types"
+  ]
 }
