🍎 Chore: Upload typechains

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "dotenv -e ./tools/env/.env.local -- hardhat compile && forge build",
+    "build": "dotenv -e ./tools/env/.env.local -- hardhat compile --force && forge build",
     "check-branch-name": "chmod 755 tools/scripts/check_branch_naming.sh && sh tools/scripts/check_branch_naming.sh",
     "deploy:base_sepolia": "dotenv -e ./tools/env/.env.base_sepolia -- npx hardhat deploy --network base_sepolia --export ./deployments/base_sepolia.json",
     "run:base_sepolia": "dotenv -e ./tools/env/.env.base_sepolia -- npx hardhat run --network base_sepolia",
