--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "check-branch-name": "chmod 755 tools/scripts/check_branch_naming.sh && sh tools/scripts/check_branch_naming.sh",
     "deploy:base_sepolia": "dotenv -e ./tools/env/.env.base_sepolia -- npx hardhat deploy --network base_sepolia --export ./deployments/base_sepolia.json",
     "run:base_sepolia": "dotenv -e ./tools/env/.env.base_sepolia -- npx hardhat run --network base_sepolia",
+    "deploy:flow_testnet": "dotenv -e ./tools/env/.env.flow_testnet -- npx hardhat deploy --network flow_testnet --export ./deployments/flow_testnet.json",
     "prepare": "npm-run-all prepare:*",
     "prepare:husky": "husky install",
     "test": "dotenv -e ./tools/env/.env.local -- forge test -vv",
